Search bar misalignment fix

--- a/app/assets/stylesheets/charity_data.css.scss
+++ b/app/assets/stylesheets/charity_data.css.scss
@@ -39,7 +39,7 @@ html, body {
 .col-1-B,  
 .col-4-B  { background: rgb(35, 172, 196); }
 .col-1-B p{ color: white;  letter-spacing: .1em; padding: 1em 0 0 .6em; text-shadow: 1px 1px #000;}
-/*.col-4-B p{ font-size: 1.2em; }*/
+.col-4-B p{ font-size: 1em; }
 				 	
 				 
 .col-3   { height: 40em; background: rgb(255, 255, 255); }
@@ -71,7 +71,7 @@ html, body {
 
  .search {
  	margin-top: 1em;
- 	padding-top: 1em;
+ 	padding: .5em 0em .5em .5em;
  	border-radius: 1em;
  	border: none;
  	box-shadow: inset .2em .2em .4em #333;
